--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: postgres://user:pass@postgres:54321/db
+      DATABASE_URL: postgres://user:pass@postgres:5432/db
       NODE_ENV: development
       PORT: 3000
     ports:
@@ -20,12 +20,14 @@ services:
   postgres:
     image: postgres:11
     ports:
-      - "34321:34321"
+      - "54399:5432"
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: pass
       POSTGRES_DB: db
 
   migration:
-    image: app:latest
-    command: ["./wait-for-it/wait-for-it.sh", "postgres:34321", "--", "npm", "run", "migrate", "up"]
+    # image: app
+    build:
+      context: .
+    command: ["./wait-for-it/wait-for-it.sh", "postgres:5432", "--strict","--", "npm", "run", "migrate", "up"]
