--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fp-ts": "^2.11.1",
     "fp-ts-ramda": "^0.1.7",
     "fp-ts-rxjs": "^0.6.15",
+    "io-ts-types": "^0.5.16",
     "node-pg-migrate": "^5.10.0",
     "ramda": "^0.27.1",
     "rxjs": "^6.6.7",
